tests/invalid_inputs/sema/class_default_private.cpp
// test that a class default access is private

class C {
	int a;
};

int main() {
	C c;
	c.a = 42;
}
